--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "node-sass": "^4.12.0",
+    "node-spotify-api": "^1.1.1",
     "sass-loader": "^7.1.0",
+    "spotify-web-api-js": "^1.2.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
